add explorer url

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             params: [{
               chainId: "0x2ca",
               rpcUrls: ["https://peer-testnet.aximchain.com"],
+              blockExplorerUrls:["http://ascscan.southeastasia.azurecontainer.io:4000/"],
               chainName: "AXC Smart Chain Testnet",
               iconUrls: ["https://github.com/aximchain/web/raw/main/aximcoin.jpg"],
               nativeCurrency: {
