add the explorer url

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <button id="connect-button">Add ASC to Metamask</button>
     <script>
       document.getElementById('connect-button').addEventListener('click', event => {
-        let account;
         let button = event.target;
 
           ethereum.request({
@@ -18,6 +17,7 @@
               chainId: "0x2ca",
               rpcUrls: ["https://peer-testnet.aximchain.com"],
               chainName: "AXC Smart Chain Testnet",
+              blockExplorerUrls: "https://ascscan.aximchain.com",
               iconUrls: ["https://github.com/aximchain/web/raw/main/aximcoin.jpg"],
               nativeCurrency: {
                 name: "Aximcoin",
