--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
               chainId: "0x2ca",
               rpcUrls: ["https://peer-testnet.aximchain.com"],
               chainName: "AXC Smart Chain Testnet",
-              blockExplorerUrls: "https://ascscan.aximchain.com",
+              blockExplorerUrls: ["https://ascscan.aximchain.com"],
               iconUrls: ["https://github.com/aximchain/web/raw/main/aximcoin.jpg"],
               nativeCurrency: {
                 name: "Aximcoin",
